--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section class="about" id="about">
         
         <div class="about-img left">
-            <img src="./assets/307314666_2917962735165296_5266571989498576425_n.jpg" alt="" class="about-img-2">
+            <img src="./assets/me.jpeg" alt="" class="about-img-2">
             <span class="circle-spin"></span>
         </div>
 
