--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <div class="education-content">
                     <div class="content">
-                        <div class="year"><i class="bx bxs-calendar"></i>May, 2024 - Present</div>
+                        <div class="year"><i class="bx bxs-calendar"></i>May, 2024 - Aug, 2024</div>
                         <h3>Data Science Research Intern - eBay</h3>
                         <p>
                             <ul>
@@ -98,12 +98,13 @@
 
                 <div class="education-content">
                     <div class="content">
-                        <div class="year"><i class="bx bxs-calendar"></i>May, 2024 - Present</div>
+                        <div class="year"><i class="bx bxs-calendar"></i>Jan, 2024 - May, 2024</div>
                         <h3> Data Science Intern - Azirio</h3>
                         <p>
                             <ul>
-                                <li>Leveraged Azure Data Factory and statistical models to optimize data management for SAT prep, creating insightful PowerBI dashboards that enhanced curriculum strategies. </li>
-                                <li>Applied data analytics to improve student outcomes, integrating Azure Data Factory and PowerBI for effective reporting and significant curriculum improvements. </li>
+                                <li>Crafted customized PowerBI dashboards based on client consultations, achieving an 11% rise in sales and enhancing customer retention by 4% </li>
+                                <li>Created an automated Azure Data Factory workflow to handle CRM ID extraction and database updates; saved 8 hours monthly of manual work. </li>
+                                <li>Innovated SQL query algorithms to categorize 8,000+ user email IDs into corporate or franchise segments; bolstered data organization and improved reporting accuracy, leading to a 25% reduction in data processing time. </li>
                                 </ul>
                         </p>
                     </div>
