--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <!--a href="#contact" class="btn">Contact Me</a-->
                     <a href="mailto:kabirschaturvedi@gmail.com" class="btn">Contact Me</a>
 
-                    <a href="https://drive.google.com/uc?export=download&id=1LPMT7bJcww0fD_UdI29Giucry2_bDzrc
+                    <a href="https://drive.google.com/file/d/1xKTIHLROIYA8YN_iJF3xXrLLJfgZDUsR/view?usp=sharing
                     " class="btn" target="_blank">My Resume</a>
                 </div>
             </div>
