--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="home-content left">
                 <h1>Hi, <br> I'm <span>Kabir Chaturvedi</span></h1>
                 <h3 class="text-animate">I'm a <span class="multiple-text"></span></h3>
-                <p>Data Science Research Intern @ eBay |  Data Science Intern @ Azirio | MS Data Science @ IUB | Expertise in Data Analysis, ML, Deep Learning, AI.</p>
+                <p>Seeking Full-Time Opportunities in the Data Science Domain | MS Data Science @ IUB | Data Science Internships at eBay & Azirio | Data Analyst at NTT Data | Expertise in Data Science, Analysis, ML, Deep Learning, Cloud and AI.</p>
                 <div class="btn-box">
                     <!--a href="#contact" class="btn">Contact Me</a-->
                     <a href="mailto:kabirschaturvedi@gmail.com" class="btn">Contact Me</a>
@@ -68,7 +68,7 @@
             <h2 class="heading">About <span>Me</span></h2>
             <div class="about-content">
                 <h3><span>Data</span> Scientist</h3>
-                <p>Greetings! I am Kabir Chaturvedi, a Data Science student pursuing my Master's degree at Indiana University Bloomington in the USA. Currently, I'm a Data Science Research intern at eBay where I mostly work with technologies such as Spark and SQL while also working as a Data Science intern at Azirio for Summer 2024 where I've confidently honed my skills in PowerBI, Azure Data Factory and other Data Viz tools. </p>
+                <p>Greetings! I’m Kabir Chaturvedi, a Master's student in Data Science at Indiana University Bloomington. I have hands-on experience as a Data Science Intern at eBay and Azirio, and as a Data Analyst at NTT Data. I specialize in leveraging technologies like Python, Spark, SQL, Power BI, and Azure Data Factory to transform complex datasets into actionable insights, optimizing business outcomes. I am currently seeking full-time opportunities in the data science domain to apply my skills and contribute to impactful projects. </p>
                 <!-- <button class="btn-box btns">
                     <a href="#" class="btn">Read More</a>
                 </button> -->
