--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
                     <!--a href="#contact" class="btn">Contact Me</a-->
                     <a href="mailto:kabirschaturvedi@gmail.com" class="btn">Contact Me</a>
 
-                    <a href="https://drive.google.com/file/d/1xKTIHLROIYA8YN_iJF3xXrLLJfgZDUsR/view?usp=sharing
-                    " class="btn" target="_blank">My Resume</a>
+                    <a href="https://drive.google.com/file/d/1kfEHAUnT0VOpJB4E6kmJX7Qte5dmKghb/view?usp=sharing">My Resume</a>
                 </div>
             </div>
             
@@ -84,7 +83,7 @@
                 <div class="education-content">
                     <div class="content">
                         <div class="year"><i class="bx bxs-calendar"></i>May, 2024 - Aug, 2024</div>
-                        <h3>Data Science Research Intern - eBay</h3>
+                        <h3>Data Science Intern - eBay</h3>
                         <p>
                             <ul>
                                 <li>Assessed two large company data tables on the Zeta platform using Spark SQL queries to quantify the impact of Promoted Listings
@@ -138,7 +137,7 @@
                         <div class="content">
                             <div class="year"><i class="bx bxs-calendar"></i>2023 - 2025</div>
                             <h3>Master of Science in Data Science - Indiana University Bloomington</h3>
-                            <p>CGPA - 3.73</p>
+                            <p>CGPA - 3.834</p>
                             <p>Relevant Courses: Applied Machine Learning, Data Mining, Statistics, Information Visualization, Social Media Mining, Applied
                                 Database Technologies</p>
                         </div>
