--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <!--a href="#contact" class="btn">Contact Me</a-->
                     <a href="mailto:kabirschaturvedi@gmail.com" class="btn">Contact Me</a>
 
-                    <a href="https://drive.google.com/file/d/1kfEHAUnT0VOpJB4E6kmJX7Qte5dmKghb/view?usp=sharing">My Resume</a>
+                    <a href="https://drive.google.com/file/d/1kfEHAUnT0VOpJB4E6kmJX7Qte5dmKghb/view?usp=sharing" class="btn" target="_blank">My Resume</a>
                 </div>
             </div>
             
