--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h3 class="text-animate">I'm a <span class="multiple-text"></span></h3>
                 <p>Seeking Full-Time Opportunities in the Data Science Domain | MS Data Science @ IUB | Data Science Internships at eBay & Azirio | Data Analyst at NTT Data | Expertise in Data Science, Analysis, ML, Deep Learning, Cloud and AI.</p>
                 <div class="btn-box">
-                    <!--a href="#contact" class="btn">Contact Me</a-->
+                    <a href="#contact" class="btn">Contact Me</a>
                     <a href="mailto:kabirschaturvedi@gmail.com" class="btn">Contact Me</a>
 
                     <a href="https://drive.google.com/file/d/1kfEHAUnT0VOpJB4E6kmJX7Qte5dmKghb/view?usp=sharing" class="btn" target="_blank">My Resume</a>
