--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
     <!-- footer design -->
     <footer class="footer" style="display: flex; justify-content: space-between; align-items: center; padding: 1rem;">
         <div class="btn-box">
-            <a href="https://drive.google.com/uc?export=download&id=1LPMT7bJcww0fD_UdI29Giucry2_bDzrc" class="btn" target="_blank">My Resume</a>
+            <a href="https://drive.google.com/file/d/1kfEHAUnT0VOpJB4E6kmJX7Qte5dmKghb/view?usp=sharing" class="btn" target="_blank">My Resume</a>
             
             <a href="https://www.linkedin.com/in/kabirschaturvedi/" target="_blank"><i class="bx bxl-linkedin"></i></a>
             <a href="https://github.com/kabirchaturvedi" target="_blank"><i class='bx bxl-github'></i></a>
